# charton-back

./: .gitignore  docker-compose.dev.yaml  docker-compose.test.yaml
.github/workflows/: build-push.yml  ci.yml
api-gateway/: Dockerfile  pyproject.toml
api-gateway/app/: auth.py  factory.py  main.py  settings.py  utils.py
api-gateway/app/routes/: auth.py  error.py  playlists.py  tracks.py  users.py
api-gateway/app/schemas/: author.py  playlist.py  tracks.py  user.py
api-gateway/services/auth/: auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py
api-gateway/services/playlist/: playlist_pb2.py  playlist_pb2.pyi  playlist_pb2_grpc.py
api-gateway/services/track/: track_pb2.py  track_pb2.pyi  track_pb2_grpc.py
api-gateway/services/user/: user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
api-gateway/tests/: test_api_gateway.py
auth-service/: Dockerfile  README.md  pyproject.toml
auth-service/app/: server.py  settings.py  utils.py
auth-service/app/models/: __init__.py  telegram_user.py
auth-service/app/repositories/: telegram_user.py
auth-service/migrations/versions/: 4697805a6c25_init.py
auth-service/services/auth/: auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py
auth-service/services/playlist/: playlist_pb2.py  playlist_pb2_grpc.py
auth-service/services/user/: user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
pgsync/: Dockerfile  entrypoint.sh  schema.json
playlist-service/: pyproject.toml
playlist-service/app/: database.py  server.py  settings.py  utils.py
playlist-service/app/models/: __init__.py  playlist.py  playlist_track.py
playlist-service/app/repositories/: playlist.py  playlist_track.py
playlist-service/migrations/: env.py
playlist-service/migrations/versions/: 420aed1d44bc_init.py  8a0b1864fecc_add_liked_field.py  a2c43012bd76_add_cascade.py
playlist-service/services/playlist/: playlist_pb2.py  playlist_pb2.pyi  playlist_pb2_grpc.py
playlist-service/services/track/: track_pb2.py  track_pb2.pyi  track_pb2_grpc.py
protos/services/auth/: auth.proto
protos/services/playlist/: playlist.proto
protos/services/track/: track.proto
protos/services/user/: user.proto
spotify-parser/: .gitignore  Dockerfile  pyproject.toml
spotify-parser/app/: consumer.py  database.py  settings.py  stub.py
spotify-parser/app/models/: __init__.py  author.py  base.py  track.py
spotify-parser/app/repositories/: author.py  base.py  track.py
spotify-parser/migrations/: env.py
spotify-parser/migrations/versions/: 610faa9d4b14_init.py
spotify-parser/services/track/: track_pb2_grpc.py
sql/: init.sql
track-service/: README.md  pyproject.toml
track-service/app/: database.py  es.py  producer.py  server.py  settings.py
track-service/app/models/: __init__.py  author.py  track.py  track_authors.py
track-service/app/repositories/: author.py  base.py  track.py  track_elasticsearch.py
track-service/migrations/versions/: 00c746280f96_add_authors.py  2647a792c5ba_initial.py  f62912b425fd_add_author_model.py
track-service/services/track/: track_pb2.py  track_pb2.pyi  track_pb2_grpc.py
user-service/: README.md  pyproject.toml
user-service/app/: database.py  server.py  settings.py  utils.py
user-service/app/models/: __init__.py  base.py  user.py
user-service/app/repositories/: base.py  user.py
user-service/migrations/versions/: 7e04efaa0a8f_add_referrer_id.py  9f5a082d8bc6_add_user_fields.py  f7a0b402ffe4_init.py
user-service/services/playlist/: playlist_pb2.pyi  playlist_pb2_grpc.py
user-service/services/user/: user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
user-service/tests/: test_user_service.py
