[project]
name = "api-gateway"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kulunchick", email = "nikolikrasovski@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn>=0.32.0",
    "grpcio>=1.67.1",
    "grpc-interceptor>=0.15.4",
    "grpcio-tools>=1.67.1",
    "pydantic-settings>=2.6.1",
    "logfire[fastapi]>=2.3.0",
    "dishka>=1.4.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
virtual = true
managed = true
dev-dependencies = [
    "ruff>=0.8.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/api_gateway"]
