[project]
name = "charton-backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kulunchick", email = "nikolikrasovski@gmail.com" }
]
dependencies = [
    "elasticsearch[async]>=8.15.1",
    "sqlalchemy[postgresql-asyncpg]>=2.0.36",
    "uuid7>=0.1.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.1",
    "grpcio>=1.67.1",
    "grpc-interceptor>=0.15.4",
    "grpcio-tools>=1.67.1",
    "logfire[asyncpg,sqlalchemy]>=2.2.1",
    "aiokafka>=0.12.0",
    "grpcio-health-checking>=1.67.1",
    "dishka>=1.4.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
virtual = true
managed = true
dev-dependencies = [
    "ruff>=0.7.3",
    "pyright>=1.1.388",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
