[project]
name = "user-service"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kulunchick", email = "nikolikrasovski@gmail.com" }
]
dependencies = [
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "grpc-interceptor>=0.15.4",
    "grpcio-health-checking>=1.68.0",
    "sqlalchemy[postgresql-asyncpg]>=2.0.36",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.1",
    "logfire[asyncpg,sqlalchemy]>=2.4.0",
    "dishka>=1.4.1",
    "uuid7>=0.1.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.rye]
virtual = true
managed = true
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pyright>=1.1.391",
    "ruff>=0.8.4",
    "types-protobuf>=5.29.1.20241207",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.25.0",
    "pytest-grpc>=0.8.0",
]

[tool.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]
